--- a/index.html
+++ b/index.html
@@ -1,19 +1,167 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gimmick Puppet Site</title>
-    <link rel="stylesheet" href="styles.css">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Gimmick Puppet Deck</title>
+
+<!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
+<style>
+  /* Reset & base */
+  * {
+    box-sizing: border-box;
+  }
+  body {
+    font-family: 'Montserrat', sans-serif;
+    background-color: #1a1a1a;
+    color: #ddd;
+    margin: 0;
+    padding: 2rem 1rem;
+    line-height: 1.6;
+  }
+  a {
+    color: #7ecbff;
+    text-decoration: none;
+    transition: color 0.3s ease;
+  }
+  a:hover {
+    color: #4aa3ff;
+    text-decoration: underline;
+  }
+
+  /* Container */
+  .container {
+    max-width: 700px;
+    margin: 0 auto;
+  }
+
+  /* Header */
+  header {
+    text-align: center;
+    margin-bottom: 0.5rem;
+  }
+  header h1 {
+    font-weight: 700;
+    font-size: 2.8rem;
+    margin: 0;
+  }
+  header p.subtitle {
+    font-weight: 400;
+    font-size: 1.25rem;
+    color: #aaa;
+    margin-top: 0.25rem;
+    font-style: italic;
+  }
+
+  /* Navigation */
+  nav {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    margin-bottom: 2rem;
+  }
+  nav a {
+    font-weight: 600;
+    font-size: 1rem;
+    padding: 0.25rem 0.5rem;
+  }
+  nav a:hover {
+    background-color: #333;
+    border-radius: 4px;
+  }
+
+  /* Images */
+  .images {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 2rem;
+    flex-wrap: wrap;
+  }
+  .images img {
+    width: 200px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px #000;
+    opacity: 0.4;
+    transition: opacity 0.3s ease, transform 0.3s ease;
+  }
+  .images img:hover {
+    opacity: 1;
+    transform: scale(1.05);
+  }
+
+  /* Content */
+  p {
+    margin-bottom: 1rem;
+    font-size: 1rem;
+  }
+
+  /* Call to action */
+  .cta {
+    display: block;
+    background-color: #4aa3ff;
+    color: white;
+    text-align: center;
+    padding: 0.75rem 1.25rem;
+    font-weight: 600;
+    border-radius: 6px;
+    max-width: 220px;
+    margin: 1rem auto 2rem auto;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+  }
+  .cta:hover {
+    background-color: #3786db;
+  }
+
+  /* Footer */
+  footer {
+    text-align: center;
+    font-size: 0.85rem;
+    color: #666;
+    border-top: 1px solid #333;
+    padding: 1rem 0 0;
+    margin-top: 3rem;
+  }
+
+  /* Responsive */
+  @media (max-width: 600px) {
+    .images {
+      flex-direction: column;
+      align-items: center;
+    }
+    .images img {
+      width: 80vw;
+      max-width: 300px;
+    }
+    nav {
+      flex-direction: column;
+      gap: 1rem;
+    }
+  }
+</style>
 </head>
+
 <body>
+  <div class="container">
+
     <header>
-        <h1>Welcome to the Gimmick Puppet Site!</h1>
+      <h1>Gimmick Puppet Deck</h1>
+      <p class="subtitle">Master the art of String Counters and XYZ supremacy with the Gimmick Puppet deck!</p>
     </header>
-    <main>
-        <p>This site will teach you how to play the Gimmick Puppet deck.</p>
-        <a href="combo.html">Try the One-Card FTK combo</a>
-    </main>
-</body>
-</html>
+
+    <nav>
+      <a href="#combos">Combos</a>
+      <a href="#cards">Cards</a>
+      <a href="https://www.masterduelmeta.com/articles/guides/gimmick-puppet-pickles" target="_blank" rel="noopener noreferrer">Official Guide</a>
+    </nav>
+
+    <div class="images">
+      <img src="https://s3.duellinksmeta.com/cards/65f3212e4e67b487ab0885b3_w420.webp" alt="Gimmick Puppet Rouge Doll" />
+      <img src="https://s3.duellinksmeta.com/cards/65f3214d4e67b487ab0887c0_w420.webp" alt="Gimmick Puppet Cattle Scream" />
+      <img src="https://s3.duellinksmeta.com/cards/65f3216e4e67b487ab08898c_w420.webp" alt="Gimmick Puppet Fantasix Machinix" />
+    </div>
+
+    <p
