--- a/index.html
+++ b/index.html
@@ -164,4 +164,16 @@
       <img src="https://s3.duellinksmeta.com/cards/65f3216e4e67b487ab08898c_w420.webp" alt="Gimmick Puppet Fantasix Machinix" />
     </div>
 
-    <p
+    <p>Welcome to the Gimmick Puppet deck resource! This page features detailed info, combos, and tips to master this unique Machine XYZ archetype.</p>
+
+    <p>See <a href="https://www.masterduelmeta.com/articles/guides/gimmick-puppet-pickles" target="_blank" rel="noopener noreferrer">this excellent guide</a> for full deck strategies and combos.</p>
+
+    <a class="cta" href="combo.html">Try the One-Card FTK Combo!</a>
+
+    <footer>
+      Guide and images sourced from Master Duel Meta and official Yu-Gi-Oh! cards.
+    </footer>
+
+  </div>
+</body>
+</html>
