--- a/combo.html
+++ b/combo.html
@@ -1,26 +1,238 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gimmick Puppet One-Card FTK</title>
-    <link rel="stylesheet" href="styles.css">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Gimmick Puppet Deck - Mansion 1-Card FTK Guide</title>
+
+<!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
+<style>
+  /* Reset & base */
+  * {
+    box-sizing: border-box;
+  }
+  body {
+    font-family: 'Montserrat', sans-serif;
+    background-color: #1a1a1a;
+    color: #ddd;
+    margin: 0;
+    padding: 2rem 1rem;
+    line-height: 1.6;
+  }
+  a {
+    color: #7ecbff;
+    text-decoration: none;
+    transition: color 0.3s ease;
+  }
+  a:hover {
+    color: #4aa3ff;
+    text-decoration: underline;
+  }
+
+  /* Container */
+  .container {
+    max-width: 700px;
+    margin: 0 auto;
+  }
+
+  /* Header */
+  header {
+    text-align: center;
+    margin-bottom: 0.5rem;
+  }
+  header h1 {
+    font-weight: 700;
+    font-size: 2.2rem;
+    margin: 0;
+  }
+  header p.subtitle {
+    font-weight: 400;
+    font-size: 1.1rem;
+    color: #aaa;
+    margin-top: 0.25rem;
+    font-style: italic;
+  }
+
+  /* Navigation */
+  nav {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    margin-bottom: 2rem;
+  }
+  nav a {
+    font-weight: 600;
+    font-size: 1rem;
+    padding: 0.25rem 0.5rem;
+  }
+  nav a:hover {
+    background-color: #333;
+    border-radius: 4px;
+  }
+
+  /* Combo Steps */
+  .combo-step {
+    background-color: #222;
+    padding: 1rem;
+    border-radius: 8px;
+    margin-bottom: 1rem;
+  }
+  .combo-step h3 {
+    margin: 0 0 0.5rem 0;
+    font-size: 1.1rem;
+    color: #7ecbff;
+  }
+  .combo-step p {
+    margin: 0;
+  }
+
+  /* Footer */
+  footer {
+    text-align: center;
+    font-size: 0.85rem;
+    color: #666;
+    border-top: 1px solid #333;
+    padding: 1rem 0 0;
+    margin-top: 3rem;
+  }
+
+  /* Responsive */
+  @media (max-width: 600px) {
+    nav {
+      flex-direction: column;
+      gap: 1rem;
+    }
+  }
+</style>
 </head>
+
 <body>
+  <div class="container">
+
     <header>
-        <h1>Gimmick Puppet One-Card FTK Combo</h1>
+      <h1>🌟 Gimmick Puppet Mansion 1-Card FTK Guide</h1>
+      <p class="subtitle">Final version of the combo walkthrough for mastering the Mansion combo!</p>
     </header>
-    <main>
-        <p>This combo demonstrates how to perform the one-card FTK combo using Gimmick Puppet Mansion of the Dreadful Dolls.</p>
-        <pre>
-Step 1: Open Mansion of the Dreadful Dolls and use its effect to send Gimmick Puppet Rouge Doll to the GY.
-Step 2: Rouge Doll’s GY effect triggers, adding itself to hand.
-Step 3: Activate Rouge Doll by revealing any Rank 8 monster in your Extra Deck to summon itself from hand and also summon Gimmick Puppet Cattle Scream from Deck.
-...
-(Combo continues here)
-        </pre>
-        <a href="index.html">Back to Homepage</a>
-    </main>
+
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="combo.html">Combo</a>
+    </nav>
+
+    <div class="combo">
+      <!-- Combo Steps -->
+      <div class="combo-step">
+        <h3>🔹 Step 1:</h3>
+        <p>Activate <strong>Mansion of the Dreadful Dolls</strong>. Add <strong>Gimmick Puppet Little Soldiers</strong> to your hand.</p>
+      </div>
+
+      <div class="combo-step">
+        <h3>🔹 Step 2:</h3>
+        <p>Normal Summon <strong>Gimmick Puppet Little Soldiers</strong>. Use its effect to send <strong>Gimmick Puppet Rouge Doll</strong> from your Deck to the Graveyard. Little Soldiers becomes Level 8.</p>
+      </div>
+
+      <div class="combo-step">
+        <h3>🔹 Step 3:</h3>
+        <p>Activate <strong>Gimmick Puppet Rouge Doll’s</strong> effect in the Graveyard. Add Rouge Doll to your hand. Then, <strong>activate Rouge Doll’s effect from your hand:</strong> reveal any Rank 8 monster from your Extra Deck, Special Summon Rouge Doll and Special Summon <strong>Gimmick Puppet Cattle Scream</strong> from your Deck.</p>
+      </div>
+
+      <div class="combo-step">
+        <h3>🔹 Step 4:</h3>
+        <p>Xyz Summon <strong>Gimmick Puppet Fantasix Machinix</strong> using Little Soldiers and Cattle Scream.</p>
+      </div>
+
+      <div class="combo-step">
+        <h3>🔹 Step 5:</h3>
+        <p>Detach <strong>Gimmick Puppet Cattle Scream</strong> from Fantasix Machinix to search <strong>Rank-Up-Magic Argent Chaos Force</strong>. Cattle Scream is now in the Graveyard.</p>
+      </div>
+
+      <div class="combo-step">
+        <h3>🔹 Step 6:</h3>
+        <p>Activate Argent Chaos Force to Rank-Up Fantasix Machinix into <strong>CXyz Gimmick Puppet Fanatix Machinix</strong>. Fanatix adds a “Puppet” Trap from Deck to hand (backup play).</p>
+      </div>
+
+      <div class="combo-step">
+        <h3>🔹 Step 7:</h3>
+        <p>Use <strong>Gimmick Puppet Cattle Scream’s</strong> Graveyard effect: detach Fantasix Machinix from Fanatix Machinix to Special Summon Cattle Scream from the Graveyard.</p>
+      </div>
+
+      <div class="combo-step">
+        <h3>🔹 Step 8:</h3>
+        <p>Xyz Summon <strong>Number 40: Gimmick Puppet of Strings</strong> using Rouge Doll and Cattle Scream. Argent Chaos Force triggers in the Graveyard and adds itself to your hand.</p>
+      </div>
+
+      <div class="combo-step">
+        <h3>🔹 Step 9:</h3>
+        <p>Use Strings’ effect: detach Cattle Scream from Strings to place String Counters on <strong>CXyz Gimmick Puppet Fanatix Machinix</strong>.</p>
+      </div>
+
+      <div class="combo-step">
+        <h3>🔹 Step 10:</h3>
+        <p>Use Fanatix Machinix’s effect: detach a material to Special Summon <strong>Gimmick Puppet Cattle Scream</strong> from the Graveyard to the opponent’s field in Defense Position. *Important: do not destroy it with Fanatix’s third effect.*</p>
+      </div>
+
+      <div class="combo-step">
+        <h3>🔹 Step 11:</h3>
+        <p>Use <strong>Rank-Up-Magic Argent Chaos Force</strong> to Rank-Up Strings into <strong>Number C40: Gimmick Puppet of Dark Strings</strong>. Dark Strings triggers: destroys Fanatix Machinix on your field, deals 3100 damage to the opponent, lets you draw 1 card, then Fantasix Machinix triggers in the Graveyard to revive itself in Defense Position and recover Argent Chaos Force from the Graveyard to your hand.</p>
+      </div>
+
+      <div class="combo-step">
+        <h3>🔹 Step 12:</h3>
+        <p>Use Mansion of the Dreadful Dolls: detach Strings from Dark Strings to summon Strings to your opponent’s field.</p>
+      </div>
+
+      <div class="combo-step">
+        <h3>🔹 Step 13:</h3>
+        <p>Link Summon <strong>Gimmick Puppet Chimera Doll</strong> using Dark Strings and Fantasix Machinix.</p>
+      </div>
+
+      <div class="combo-step">
+        <h3>🔹 Step 14:</h3>
+        <p>Use Chimera Doll’s effect: search <strong>Gimmick Puppet Terror Baby</strong> from your Deck.</p>
+      </div>
+
+      <div class="combo-step">
+        <h3>🔹 Step 15:</h3>
+        <p>Normal Summon <strong>Gimmick Puppet Terror Baby</strong>. Revive <strong>Gimmick Puppet Rouge Doll</strong> from your Graveyard.</p>
+      </div>
+
+      <div class="combo-step">
+        <h3>🔹 Step 16:</h3>
+        <p>Banish <strong>Gimmick Puppet Little Soldiers</strong> from your Graveyard to make Terror Baby Level 8.</p>
+      </div>
+
+      <div class="combo-step">
+        <h3>🔹 Step 17:</h3>
+        <p>Xyz Summon <strong>Number 15: Gimmick Puppet Giant Grinder</strong> using Terror Baby and Rouge Doll.</p>
+      </div>
+
+      <div class="combo-step">
+        <h3>🔹 Step 18:</h3>
+        <p>Use Giant Grinder’s effect: detach a material to destroy Strings on the opponent’s board and burn the opponent for 3000 damage.</p>
+      </div>
+
+      <div class="combo-step">
+        <h3>🔹 Step 19:</h3>
+        <p>Use Argent Chaos Force to Rank-Up Giant Grinder into <strong>Number C15: Gimmick Puppet Giant Hunter</strong>.</p>
+      </div>
+
+      <div class="combo-step">
+        <h3>🔹 Step 20:</h3>
+        <p>Use Giant Hunter’s effect: detach a material to destroy Cattle Scream on the opponent’s board and burn the opponent for 2000 damage.</p>
+      </div>
+
+      <div class="combo-step">
+        <h3>✅ Total Damage:</h3>
+        <p>3100 (Dark Strings) + 3000 (Giant Grinder) + 2000 (Giant Hunter) = <strong>8100 damage</strong> — enough for a First Turn Kill (FTK)!</p>
+      </div>
+    </div>
+
+    <footer>
+      Guide and images sourced from Master Duel Meta and official Yu-Gi-Oh! cards.
+    </footer>
+
+  </div>
 </body>
 </html>
