--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
     <nav>
       <a href="#combos">Combos</a>
       <a href="#cards">Cards</a>
+      <a href="gallery.html">Gallery</a>
       <a href="https://www.masterduelmeta.com/articles/guides/gimmick-puppet-pickles" target="_blank" rel="noopener noreferrer">Official Guide</a>
     </nav>
 
