--- a/gallery.html
+++ b/gallery.html
@@ -1,191 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Gimmick Puppet Deck Gallery</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Gimmick Puppet Card Gallery</title>
+  <style>
+    body {
+      background-color: #1a1a1a;
+      color: #ddd;
+      font-family: 'Montserrat', sans-serif;
+      margin: 0;
+      padding: 2rem 1rem;
+    }
 
-<!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    h1 {
+      text-align: center;
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+    }
 
-<style>
-  body {
-    font-family: 'Montserrat', sans-serif;
-    background-color: #1a1a1a;
-    color: #ddd;
-    margin: 0;
-    padding: 2rem 1rem;
-    line-height: 1.6;
-  }
+    .gallery {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+    }
 
-  .container {
-    max-width: 900px;
-    margin: 0 auto;
-  }
+    .gallery img {
+      width: 100px; /* Adjusted to be smaller */
+      border-radius: 8px;
+      cursor: pointer;
+      transition: transform 0.2s ease;
+    }
 
-  header {
-    text-align: center;
-    margin-bottom: 1rem;
-  }
-  header h1 {
-    font-size: 2.5rem;
-    margin: 0;
-  }
-  nav {
-    display: flex;
-    justify-content: center;
-    gap: 2rem;
-    margin-bottom: 2rem;
-  }
-  nav a {
-    color: #7ecbff;
-    font-weight: 600;
-    text-decoration: none;
-    transition: color 0.3s ease;
-  }
-  nav a:hover {
-    color: #4aa3ff;
-    text-decoration: underline;
-  }
+    .gallery img:hover {
+      transform: scale(1.05);
+    }
 
-  .gallery {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-  }
+    /* Modal styling from earlier */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0,0,0,0.8);
+    }
 
-  .card {
-    position: relative;
-    width: 200px;
-    text-align: center;
-  }
+    .modal-content {
+      background-color: #2a2a2a;
+      margin: 10% auto;
+      padding: 20px;
+      border: 1px solid #444;
+      width: 80%;
+      max-width: 500px;
+      color: #ddd;
+      border-radius: 10px;
+    }
 
-  .card img {
-    width: 100%;
-    border-radius: 8px;
-    box-shadow: 0 0 10px #000;
-    opacity: 0.85;
-    transition: opacity 0.3s ease, transform 0.3s ease;
-  }
-  .card img:hover {
-    opacity: 1;
-    transform: scale(1.05);
-  }
+    .close {
+      color: #aaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+    }
 
-  .card h3 {
-    margin: 0.5rem 0 0;
-    font-size: 1rem;
-    color: #fff;
-  }
+    .close:hover,
+    .close:focus {
+      color: #fff;
+      text-decoration: none;
+      cursor: pointer;
+    }
 
-  .tooltip {
-    position: absolute;
-    background-color: rgba(40, 40, 40, 0.95);
-    color: #fff;
-    padding: 0.75rem;
-    border-radius: 6px;
-    box-shadow: 0 0 10px #000;
-    font-size: 0.9rem;
-    max-width: 250px;
-    z-index: 1000;
-    pointer-events: none;
-    display: none;
-  }
-</style>
+    @media (max-width: 600px) {
+      .gallery img {
+        width: 80px;
+      }
+    }
+  </style>
 </head>
-
 <body>
-  <div class="container">
-    <header>
-      <h1>Gimmick Puppet Card Gallery</h1>
-      <p>Hover over a card to see its details and effects!</p>
-    </header>
-
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="combo.html">Combo Guide</a>
-      <a href="https://www.masterduelmeta.com/articles/guides/gimmick-puppet-pickles" target="_blank" rel="noopener noreferrer">Official Guide</a>
-    </nav>
-
-    <div class="gallery">
-      <div class="card"
-           data-name="Gimmick Puppet Rouge Doll"
-           data-level="4"
-           data-type="Machine / Effect"
-           data-attribute="DARK"
-           data-atk="1600"
-           data-def="1000"
-           data-effect="If you control no monsters: You can Special Summon this card from your hand. If this card is Normal or Special Summoned: You can Special Summon 1 'Gimmick Puppet' monster from your Deck, except 'Gimmick Puppet Rouge Doll'.">
-        <img src="https://s3.duellinksmeta.com/cards/65f3212e4e67b487ab0885b3_w420.webp" alt="Gimmick Puppet Rouge Doll">
-        <h3>Rouge Doll</h3>
-      </div>
-
-      <div class="card"
-           data-name="Gimmick Puppet Cattle Scream"
-           data-level="4"
-           data-type="Machine / Effect"
-           data-attribute="DARK"
-           data-atk="1000"
-           data-def="600"
-           data-effect="If you control a 'Gimmick Puppet' monster: You can Special Summon this card from your hand. If this card is detached from an Xyz Monster to activate that monster's effect: Add 1 'Rank-Up-Magic Argent Chaos Force' from your Deck or GY to your hand.">
-        <img src="https://s3.duellinksmeta.com/cards/65f3214d4e67b487ab0887c0_w420.webp" alt="Gimmick Puppet Cattle Scream">
-        <h3>Cattle Scream</h3>
-      </div>
-
-      <div class="card"
-           data-name="Gimmick Puppet Fantasix Machinix"
-           data-rank="8"
-           data-type="Machine / Xyz / Effect"
-           data-attribute="DARK"
-           data-atk="3000"
-           data-def="2000"
-           data-effect="2 Level 8 monsters. Once per turn: You can detach 1 material from this card; Special Summon 1 'Gimmick Puppet' monster from your GY to your opponent’s field.">
-        <img src="https://s3.duellinksmeta.com/cards/65f3216e4e67b487ab08898c_w420.webp" alt="Gimmick Puppet Fantasix Machinix">
-        <h3>Fantasix Machinix</h3>
-      </div>
-    </div>
-
-    <footer>
-      Guide and images sourced from Master Duel Meta and official Yu-Gi-Oh! cards.
-    </footer>
+  <h1>Gimmick Puppet Card Gallery</h1>
+  <div class="gallery">
+    <!-- Cards will be listed here -->
   </div>
 
-  <div class="tooltip"></div>
+  <!-- Modal -->
+  <div id="cardModal" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="closeModal()">&times;</span>
+      <div id="modalContent"></div>
+    </div>
+  </div>
 
   <script>
-    const tooltip = document.querySelector('.tooltip');
+    // Placeholder JavaScript for opening/closing modal
+    function openModal(content) {
+      document.getElementById("modalContent").innerHTML = content;
+      document.getElementById("cardModal").style.display = "block";
+    }
 
-    document.querySelectorAll('.card').forEach(card => {
-      card.addEventListener('mouseenter', (e) => {
-        const name = card.dataset.name;
-        const level = card.dataset.level || card.dataset.rank;
-        const levelLabel = card.dataset.level ? 'Level' : 'Rank';
-        const type = card.dataset.type;
-        const attribute = card.dataset.attribute;
-        const atk = card.dataset.atk;
-        const def = card.dataset.def;
-        const effect = card.dataset.effect;
+    function closeModal() {
+      document.getElementById("cardModal").style.display = "none";
+    }
 
-        tooltip.innerHTML = `
-          <strong>${name}</strong><br>
-          <em>${levelLabel}:</em> ${level} | <em>Type:</em> ${type}<br>
-          <em>Attribute:</em> ${attribute}<br>
-          <em>ATK/DEF:</em> ${atk}/${def}<br>
-          <p style="margin-top: 0.5rem;">${effect}</p>
-        `;
-        tooltip.style.display = 'block';
-      });
-
-      card.addEventListener('mousemove', (e) => {
-        tooltip.style.top = (e.pageY + 20) + 'px';
-        tooltip.style.left = (e.pageX + 20) + 'px';
-      });
-
-      card.addEventListener('mouseleave', () => {
-        tooltip.style.display = 'none';
-      });
-    });
+    window.onclick = function(event) {
+      let modal = document.getElementById("cardModal");
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
+    };
   </script>
 </body>
 </html>
