--- a/gallery.html
+++ b/gallery.html
@@ -5,110 +5,155 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Gimmick Puppet Card Gallery</title>
 
-<!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-
 <style>
   body {
-    font-family: 'Montserrat', sans-serif;
     background-color: #1a1a1a;
     color: #ddd;
-    margin: 0;
-    padding: 2rem 1rem;
+    font-family: Arial, sans-serif;
+    margin: 2rem 1rem;
+    text-align: center;
   }
   h1 {
-    text-align: center;
     margin-bottom: 1.5rem;
   }
+
   .gallery {
     display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(100px,1fr));
-    gap: 15px;
+    grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
+    gap: 10px;
     max-width: 900px;
     margin: 0 auto 3rem auto;
   }
   .gallery img {
-    width: 100%;
-    border-radius: 8px;
-    box-shadow: 0 0 8px #000;
+    width: 80px;
+    border-radius: 6px;
+    box-shadow: 0 0 6px #000;
     cursor: pointer;
-    transition: transform 0.2s ease, box-shadow 0.3s ease;
+    transition: transform 0.15s ease, box-shadow 0.3s ease;
     opacity: 0.9;
   }
   .gallery img:hover {
     transform: scale(1.1);
     opacity: 1;
-    box-shadow: 0 0 16px #4aa3ff;
+    box-shadow: 0 0 12px #4aa3ff;
   }
 
-  /* Modal styles */
+  /* Modal Styles */
   .modal {
     display: none;
     position: fixed;
-    z-index: 1000;
-    left: 0; top: 0; right: 0; bottom: 0;
-    background: rgba(0,0,0,0.85);
-    justify-content: center;
-    align-items: center;
-    padding: 1rem;
+    z-index: 100;
+    left: 0; top: 0;
+    width: 100%; height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.8);
   }
   .modal-content {
-    background: #222;
-    padding: 1.5rem;
-    border-radius: 12px;
-    max-width: 500px;
-    max-height: 80vh;
-    overflow-y: auto;
+    background-color: #222;
+    margin: 5% auto;
+    padding: 20px;
+    border-radius: 10px;
+    width: 90%;
+    max-width: 600px;
     color: #ddd;
-    font-size: 1rem;
-    box-shadow: 0 0 20px #4aa3ff;
-    position: relative;
+    text-align: left;
   }
-  .modal-close {
-    position: absolute;
-    top: 8px; right: 12px;
+  .modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .modal-header h2 {
+    margin: 0;
     font-size: 1.5rem;
-    font-weight: 700;
-    color: #ccc;
-    cursor: pointer;
-    user-select: none;
   }
-  .modal-close:hover {
-    color: white;
+  .close {
+    color: #aaa;
+    font-size: 1.5rem;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  .close:hover {
+    color: #fff;
+  }
+  .modal-content img {
+    float: right;
+    width: 120px;
+    margin-left: 20px;
+    border-radius: 6px;
+    box-shadow: 0 0 8px #000;
+  }
+  .modal-body {
+    margin-top: 1rem;
+    font-size: 0.95rem;
+    line-height: 1.3;
+  }
+  .modal-footer {
+    clear: both;
+    margin-top: 1rem;
+    font-size: 0.85rem;
+    color: #888;
+    text-align: center;
   }
 </style>
 </head>
-
 <body>
+
   <h1>Gimmick Puppet Card Gallery</h1>
 
   <div class="gallery">
-    <img src="https://s3.duellinksmeta.com/cards/65f3212e4e67b487ab0885b3_w420.webp" alt="Gimmick Puppet Rouge Doll" 
-         onclick="openModal('**Gimmick Puppet Rouge Doll**<br>Level 4 / DARK / Machine<br>Effect: When this card is sent to the GY by a Gimmick Puppet card\'s effect: You can add this card to your hand.<br><br>This card can be Special Summoned from your hand by revealing a Rank 8 monster in your Extra Deck and Special Summoning 1 \"Gimmick Puppet\" monster from your Deck.')">
-    <img src="https://s3.duellinksmeta.com/cards/65f3214d4e67b487ab0887c0_w420.webp" alt="Gimmick Puppet Cattle Scream" 
-         onclick="openModal('**Gimmick Puppet Cattle Scream**<br>Level 8 / DARK / Machine<br>Effect: You can Special Summon this card from your hand by banishing 1 \"Gimmick Puppet\" monster from your GY.<br><br>Once per turn: You can detach 1 material; place 1 String Counter on a \"Gimmick Puppet\" Xyz Monster you control.<br><br>When this card is detached from an Xyz Monster: You can Special Summon this card from your GY to your opponent\'s field in Defense Position.')">
-    <img src="https://s3.duellinksmeta.com/cards/65f3216e4e67b487ab08898c_w420.webp" alt="Gimmick Puppet Fantasix Machinix" 
-         onclick="openModal('**Gimmick Puppet Fantasix Machinix**<br>Rank 8 / DARK / Machine / Xyz<br>Effect: You can detach 1 material from this card; Special Summon 1 \"Gimmick Puppet Cattle Scream\" from your GY to your opponent\'s field in Defense Position.<br><br>When this card is sent to the GY: You can add 1 \"Rank-Up-Magic Argent Chaos Force\" from your Deck to your hand.<br><br>This card is a key Xyz Monster in the deck and is often used in combos.')">
+    <img src="https://s3.duellinksmeta.com/cards/65f3212e4e67b487ab0885b3_w420.webp" alt="Gimmick Puppet Rouge Doll" data-name="Gimmick Puppet Rouge Doll" data-type="Machine / Effect Monster" data-attribute="DARK" data-level="4" data-effect="If this card is sent from the Deck to the GY by a \"Gimmick Puppet\" monster’s effect: You can add this card from your GY to your hand. During your Main Phase, you can reveal this card in your hand, then target 1 Rank 8 Xyz Monster you control; Special Summon this card, then immediately after this effect resolves, Xyz Summon 1 Machine-Type \"Gimmick Puppet\" Xyz Monster using only those 2 monsters." />
+    
+    <img src="https://s3.duellinksmeta.com/cards/65f3214d4e67b487ab0887c0_w420.webp" alt="Gimmick Puppet Cattle Scream" data-name="Gimmick Puppet Cattle Scream" data-type="Machine / Effect Monster" data-attribute="DARK" data-level="4" data-effect="If this card is sent from the Deck to the GY by a \"Gimmick Puppet\" monster’s effect: You can add this card from your GY to your hand. You can detach 1 material from an Xyz Monster you control, then target 1 \"Gimmick Puppet\" monster in your GY, except \"Gimmick Puppet Cattle Scream\"; Special Summon that target." />
+
+    <img src="https://s3.duellinksmeta.com/cards/65f3216e4e67b487ab08898c_w420.webp" alt="Gimmick Puppet Fantasix Machinix" data-name="Gimmick Puppet Fantasix Machinix" data-type="Machine / Xyz / Effect Monster" data-attribute="DARK" data-rank="8" data-effect="2 Level 8 Machine-Type monsters. You can detach 1 material from this card; Special Summon 1 \"Gimmick Puppet\" monster from your GY to your opponent’s field, and if you do, it cannot be destroyed by battle or card effects this turn." />
   </div>
 
   <!-- Modal -->
-  <div id="modal" class="modal" onclick="closeModal(event)">
-    <div class="modal-content" id="modal-content">
-      <span class="modal-close" onclick="closeModal(event)">&times;</span>
-      <div id="modal-text"></div>
+  <div id="cardModal" class="modal">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h2 id="modalName"></h2>
+        <span class="close" id="modalClose">&times;</span>
+      </div>
+      <img id="modalImg" src="" alt="" />
+      <div class="modal-body" id="modalDetails"></div>
+      <div class="modal-footer">Card details sourced from official databases.</div>
     </div>
   </div>
 
 <script>
-  function openModal(content) {
-    document.getElementById('modal-text').innerHTML = content;
-    document.getElementById('modal').style.display = 'flex';
-  }
-  function closeModal(event) {
-    if(event.target.id === 'modal' || event.target.className === 'modal-close') {
-      document.getElementById('modal').style.display = 'none';
+  const modal = document.getElementById('cardModal');
+  const modalName = document.getElementById('modalName');
+  const modalImg = document.getElementById('modalImg');
+  const modalDetails = document.getElementById('modalDetails');
+  const modalClose = document.getElementById('modalClose');
+
+  document.querySelectorAll('.gallery img').forEach(img => {
+    img.addEventListener('click', () => {
+      modal.style.display = 'block';
+      modalName.textContent = img.dataset.name;
+      modalImg.src = img.src;
+      modalImg.alt = img.alt;
+
+      let details = `
+        <strong>Type:</strong> ${img.dataset.type}<br/>
+        <strong>Attribute:</strong> ${img.dataset.attribute}<br/>
+        ${img.dataset.level ? `<strong>Level:</strong> ${img.dataset.level}<br/>` : ''}
+        ${img.dataset.rank ? `<strong>Rank:</strong> ${img.dataset.rank}<br/>` : ''}
+        <br/>
+        <strong>Effect:</strong><br/>${img.dataset.effect}
+      `;
+      modalDetails.innerHTML = details;
+    });
+  });
+
+  modalClose.onclick = () => modal.style.display = 'none';
+  window.onclick = event => {
+    if (event.target == modal) {
+      modal.style.display = 'none';
     }
-  }
+  };
 </script>
 
 </body>
