--- a/gallery.html
+++ b/gallery.html
@@ -138,6 +138,19 @@
       data-atk="3000" 
       data-def="2000" 
       data-effect="2 Level 8 Machine-Type monsters. You can detach 1 material from this card; Special Summon 1 'Gimmick Puppet' monster from your GY to your opponent’s field, and if you do, it cannot be destroyed by battle or card effects this turn." 
+      <!-- Placeholders for future cards -->
+<img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
+<img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
+<img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
+<img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
+<img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
+<img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
+<img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
+<img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
+<img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
+<img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
+<img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
+<img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
     />
   </div>
 
