--- a/gallery.html
+++ b/gallery.html
@@ -100,6 +100,9 @@
 </style>
 </head>
 <body>
+ <nav>
+  <a href="index.html" style="color: #7ecbff; text-decoration: none; font-weight: 600;">← Back to Home</a>
+ </nav>
 
   <h1>Gimmick Puppet Card Gallery</h1>
 
