--- a/gallery.html
+++ b/gallery.html
@@ -99,10 +99,10 @@
   }
 </style>
 </head>
+  <nav style="display: flex; justify-content: center; gap: 2rem; margin-bottom: 2rem;">
+  <a href="index.html" style="font-weight: 600; font-size: 1rem; padding: 0.25rem 0.5rem; color: #7ecbff; text-decoration: none;">← Back to Home</a>
+  </nav>
 <body>
- <nav>
-  <a href="index.html" style="color: #7ecbff; text-decoration: none; font-weight: 600;">← Back to Home</a>
- </nav>
 
   <h1>Gimmick Puppet Card Gallery</h1>
 
