--- a/gallery.html
+++ b/gallery.html
@@ -58,6 +58,7 @@
     max-width: 600px;
     color: #ddd;
     text-align: left;
+    position: relative;
   }
   .modal-header {
     display: flex;
@@ -83,6 +84,12 @@
     margin-left: 20px;
     border-radius: 6px;
     box-shadow: 0 0 8px #000;
+    transition: transform 0.3s ease;
+    cursor: zoom-in;
+  }
+  .modal-content img.zoomed {
+    transform: scale(1.5);
+    cursor: zoom-out;
   }
   .modal-body {
     margin-top: 1rem;
@@ -97,23 +104,13 @@
     color: #888;
     text-align: center;
   }
-  /* Click-to-Zoom Styles */
-.popup-content img.zoomed {
-  transform: scale(1.5);
-  transition: transform 0.3s ease;
-  cursor: zoom-out;
-}
-
-.popup-content img {
-  transition: transform 0.3s ease;
-  cursor: zoom-in;
-}
 </style>
 </head>
-  <nav style="display: flex; justify-content: center; gap: 2rem; margin-bottom: 2rem;">
-  <a href="index.html" style="font-weight: 600; font-size: 1rem; padding: 0.25rem 0.5rem; color: #7ecbff; text-decoration: none;">← Back to Home</a>
-  </nav>
 <body>
+
+  <nav style="display: flex; justify-content: center; gap: 2rem; margin-bottom: 2rem;">
+    <a href="index.html" style="font-weight: 600; font-size: 1rem; padding: 0.25rem 0.5rem; color: #7ecbff; text-decoration: none;">← Back to Home</a>
+  </nav>
 
   <h1>Gimmick Puppet Card Gallery</h1>
 
@@ -152,79 +149,27 @@
       data-atk="3000" 
       data-def="2000" 
       data-effect="2 Level 8 Machine-Type monsters. You can detach 1 material from this card; Special Summon 1 'Gimmick Puppet' monster from your GY to your opponent’s field, and if you do, it cannot be destroyed by battle or card effects this turn." 
-      <!-- Placeholders for future cards -->
-<img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
-<img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
-<img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
-<img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
-<img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
-<img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
-<img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
-<img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
-<img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
-<img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
-<img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
-<img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
     />
+
+    <!-- Placeholders for future cards -->
+    <img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
+    <img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
+    <img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
+    <img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
+    <img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
+    <img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
+    <img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
+    <img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
+    <img src="https://via.placeholder.com/80x115.png?text=Card+Back" alt="Placeholder" data-name="TBD" data-type="-" data-attribute="-" data-level="-" data-atk="-" data-def="-" data-effect="Card description goes here." />
   </div>
 
   <!-- Modal -->
-  <div id="cardModal" class="modal">
+  <div id="cardModal" class="modal" role="dialog" aria-modal="true" aria-labelledby="modalName">
     <div class="modal-content">
       <div class="modal-header">
         <h2 id="modalName"></h2>
-        <span class="close" id="modalClose">&times;</span>
+        <button class="close" id="modalClose" aria-label="Close modal">&times;</button>
       </div>
       <img id="modalImg" src="" alt="" />
       <div class="modal-body" id="modalDetails"></div>
-      <div class="modal-footer">Card details sourced from official databases.</div>
-    </div>
-  </div>
-
-<script>
-  const modal = document.getElementById('cardModal');
-  const modalName = document.getElementById('modalName');
-  const modalImg = document.getElementById('modalImg');
-  const modalDetails = document.getElementById('modalDetails');
-  const modalClose = document.getElementById('modalClose');
-
-  document.querySelectorAll('.gallery img').forEach(img => {
-    img.addEventListener('click', () => {
-      modal.style.display = 'block';
-      modalName.textContent = img.dataset.name;
-      modalImg.src = img.src;
-      modalImg.alt = img.alt;
-
-      let details = `
-        <strong>Type:</strong> ${img.dataset.type}<br/>
-        <strong>Attribute:</strong> ${img.dataset.attribute}<br/>
-        ${img.dataset.level ? `<strong>Level:</strong> ${img.dataset.level}<br/>` : ''}
-        ${img.dataset.rank ? `<strong>Rank:</strong> ${img.dataset.rank}<br/>` : ''}
-        <strong>ATK:</strong> ${img.dataset.atk} | <strong>DEF:</strong> ${img.dataset.def}<br/><br/>
-        <strong>Effect:</strong><br/>${img.dataset.effect}
-      `;
-      modalDetails.innerHTML = details;
-    });
-  });
-
-  modalClose.onclick = () => modal.style.display = 'none';
-  window.onclick = event => {
-    if (event.target == modal) {
-      modal.style.display = 'none';
-    }
-  };
-</script>
-<script>
-// Wait until the page loads
-window.onload = function() {
-  // Find the pop-up image inside .popup-content
-  const popupImage = document.querySelector('.popup-content img');
-  if (popupImage) {
-    popupImage.addEventListener('click', () => {
-      popupImage.classList.toggle('zoomed');
-    });
-  }
-};
-</script>
-</body>
-</html>
+      <div class="modal-footer">Card details sourced from official databases
